Upgraded to java 17 and spark 3.5.6